# sw-checklist

./: .gitignore  Cargo.toml  README.md  build.rs
components/checklist-cli/: Cargo.toml
components/checklist-cli/crates/cli-args/: Cargo.toml
components/checklist-cli/crates/cli-args/src/: args.rs  lib.rs
components/checklist-cli/crates/cli-output/: Cargo.toml
components/checklist-cli/crates/cli-output/src/: format.rs  lib.rs  print.rs
components/checklist-cli/crates/cli-runner/: Cargo.toml
components/checklist-cli/crates/cli-runner/src/: lib.rs  output.rs  runner.rs  setup.rs
components/checklist-cli/crates/sw-checklist/: Cargo.toml  build.rs
components/checklist-cli/crates/sw-checklist/src/: main.rs
components/checklist-discovery/: Cargo.toml
components/checklist-discovery/crates/discovery-cargo/: Cargo.toml
components/checklist-discovery/crates/discovery-cargo/src/: classify.rs  find.rs  lib.rs
components/checklist-discovery/crates/discovery-crate/: Cargo.toml
components/checklist-discovery/crates/discovery-crate/src/: crate_type.rs  lib.rs  metadata.rs
components/checklist-handler-cargo/: Cargo.toml
components/checklist-handler-cargo/crates/cargo-edition/: Cargo.toml
components/checklist-handler-cargo/crates/cargo-edition/src/: check.rs  extract.rs  lib.rs
components/checklist-handler-cargo/crates/handler-cargo/: Cargo.toml
components/checklist-handler-cargo/crates/handler-cargo/src/: handler.rs  lib.rs
components/checklist-handler-clap/: Cargo.toml
components/checklist-handler-clap/crates/clap-binary/: Cargo.toml
components/checklist-handler-clap/crates/clap-binary/src/: discover.rs  freshness.rs  lib.rs
components/checklist-handler-clap/crates/clap-help/: Cargo.toml
components/checklist-handler-clap/crates/clap-help/src/: check.rs  content.rs  lib.rs  util.rs
components/checklist-handler-clap/crates/clap-version/: Cargo.toml
components/checklist-handler-clap/crates/clap-version/src/: check.rs  fields.rs  lib.rs  util.rs
components/checklist-handler-clap/crates/handler-clap/: Cargo.toml
components/checklist-handler-clap/crates/handler-clap/src/: check.rs  handler.rs  lib.rs  result.rs
components/checklist-handler-modularity/: Cargo.toml
components/checklist-handler-modularity/crates/handler-modularity/: Cargo.toml
components/checklist-handler-modularity/crates/handler-modularity/src/: crate_count.rs  handler.rs  lib.rs  module_count.rs
components/checklist-handler-modularity/crates/modularity-loc/: Cargo.toml
components/checklist-handler-modularity/crates/modularity-loc/src/: file_loc.rs  function_loc.rs  lib.rs  parse.rs
components/checklist-handler-trait/: Cargo.toml
components/checklist-handler-trait/crates/handler-trait/: Cargo.toml
components/checklist-handler-trait/crates/handler-trait/src/: context.rs  handler.rs  lib.rs
components/checklist-handler-wasm/: Cargo.toml
components/checklist-handler-wasm/crates/handler-wasm/: Cargo.toml
components/checklist-handler-wasm/crates/handler-wasm/src/: detect.rs  handler.rs  lib.rs  metadata.rs
components/checklist-handler-wasm/crates/wasm-html/: Cargo.toml
components/checklist-handler-wasm/crates/wasm-html/src/: html.rs  lib.rs  source.rs
components/checklist-model/: Cargo.toml
components/checklist-model/crates/checklist-config/: Cargo.toml
components/checklist-model/crates/checklist-config/src/: builder.rs  config.rs  lib.rs
components/checklist-model/crates/checklist-result/: Cargo.toml
components/checklist-model/crates/checklist-result/src/: lib.rs  result.rs  status.rs
docs/: ai_agent_instructions.md  architecture.md  claude-web-research-preview-notes.md  design.md  learnings.md  plan.md  prd.md  status.md
scripts/: build-all.sh  run.sh
src/: discovery.rs  main.rs  utils.rs
src/checks/: cargo.rs  clap.rs  install.rs  mod.rs  modularity.rs  tests.rs  wasm.rs
wiki/: Architecture-Overview.md  Check-Orchestration.md  Clap-CLI-Checks.md  Component-Details.md  Design-Decisions.md  Home.md  Modularity-Checks.md  README.md  System-Flows.md  Testing-Strategy.md  WASM-Checks.md
