[package]
name = "sw-checklist"
version = "0.1.0"
edition = "2021"
authors = ["Michael A Wright"]
license = "MIT"
description = "CLI tool for validating Software Wrighter LLC project conformance"
repository = "https://github.com/softwarewrighter/sw-checklist"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
toml = "0.8"
const_format = "0.2"

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
chrono = "0.4"
hostname = "0.4"
