[package]
name = "handler-cargo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
checklist-result.workspace = true
discovery-crate.workspace = true
handler-trait.workspace = true
cargo-edition.workspace = true
